--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,37 @@
 		<welcome-file>user-list.html</welcome-file>
 		<welcome-file>user-list.htm</welcome-file>
 	</welcome-file-list>
-
+	
+	
+	<!-- CORS -->
+	<filter>
+		<filter-name>CORS</filter-name>
+		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+		<init-param>
+			<param-name>cors.allowOrigin</param-name>
+			<param-value>*</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.supportedMethods</param-name>
+			<param-value>GET, POST</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.supportedHeaders</param-name>
+			<param-value>Accept, Origin, X-Requested-With, Last-Modified</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.exposedHeaders</param-name>
+			<param-value>Set-Cookie</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.supportsCredentials</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CORS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<filter>
 		<filter-name>LoginFilter</filter-name>
@@ -19,14 +49,14 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-  	<filter>
+	<filter>
 		<filter-name>AppFilter</filter-name>
 		<filter-class>com.junyu.filter.AppFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>AppFilter</filter-name>
 		<url-pattern>*.do</url-pattern>
-	</filter-mapping> 
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>InitServlet</servlet-name>
@@ -65,4 +95,26 @@
 		<servlet-name>estate</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+
+
+	<!-- druid监控 -->
+	<servlet>
+		<servlet-name>DruidStatView</servlet-name>
+		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+		<init-param>
+			<!-- 用户名 -->
+			<param-name>loginUsername</param-name>
+			<param-value>admin</param-value>
+		</init-param>
+		<init-param>
+			<!-- 密码 -->
+			<param-name>loginPassword</param-name>
+			<param-value>admin</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DruidStatView</servlet-name>
+		<url-pattern>/druid/*</url-pattern>
+	</servlet-mapping>
+
 </web-app>
